final project commit

--- a/index.html
+++ b/index.html
@@ -77,26 +77,28 @@
 
             <div class="card-sec">
                 <div class="card" id="card1">
-                    <a href="/pages/bags1.html" target="_blank">
-                        <div class="card-img">
-                            <img src="https://m.media-amazon.com/images/I/619gGitgILL._AC_UY1100_.jpg" alt="">
-                        </div>
-                        <div class="card-heading">
-                            <h2>bagd name</h2>
-                        </div>
-                        <div class="key-feture">
-                            high quality material &nbsp
-                            stylish design
-                        </div>
+                    <div class="card-img">
+                        <a href="/pages/p1.html" target="_blank">
+                            <img src="https://assets.ajio.com/medias/sys_master/root/20231130/vOuf/6568a847afa4cf41f5ab7a7b/-473Wx593H-469565051-multi-MODEL.jpg"
+                                alt="">
+                        </a>
+                    </div>
+                    <div class="card-heading">
+                        <h2>bagd name</h2>
+                    </div>
+                    <div class="key-feture">
+                        high quality material &nbsp
+                        stylish design
+                    </div>
 
-                        <div class="price">
-                            <span> ₹1000</span>
-                        </div>
+                    <div class="price">
+                        <span> ₹1000</span>
+                    </div>
 
-                        <div class="button-card">
-                            <button id="cart" onclick="addcard('p1')" class="addcard">add to card</button>
-                            <button id="buy">buy now </button>
-                        </div>
+                    <div class="button-card">
+                        <button id="cart" onclick="addcard('p1')" class="addcard">add to card</button>
+                        <button id="buy" onclick="buy('p1')">buy now </button>
+                    </div>
                     </a>
                 </div>
 
@@ -104,28 +106,29 @@
 
                 <!-- this is second card -->
                 <div class="card" id="card2">
-                    <a href="/pages/bags1.html" target="_blank">
-                        <div class="card-img">
-                            <img src="https://m.media-amazon.com/images/I/619gGitgILL._AC_UY1100_.jpg" alt="">
+                    <div class="card-img">
+                        <a href="/pages/p2.html" target="_blank">
+                            <img src="https://assets.ajio.com/medias/sys_master/root/20231130/35WR/6568a0bcddf7791519a7ff3e/-473Wx593H-469565050-multi-MODEL.jpg"
+                                alt="">
+                        </a>
+                    </div>
+                    <div class="card-heading">
+                        <h2>bag name</h2>
+                    </div>
+                    <div class="key-feture">
+                        high quality material &nbsp
+                        stylish design
+                    </div>
 
-                        </div>
-                        <div class="card-heading">
-                            <h2>bagd name</h2>
-                        </div>
-                        <div class="key-feture">
-                            high quality material &nbsp
-                            stylish design
-                        </div>
+                    <div class="price">
+                        <span> ₹1000</span>
 
-                        <div class="price">
-                            <span> ₹1000</span>
+                    </div>
 
-                        </div>
-
-                        <div class="button-card">
-                            <button id="cart" class="addcard" onclick="addcard('p2')">add to card</button>
-                            <button id="buy">buy now </button>
-                        </div>
+                    <div class="button-card">
+                        <button id="cart" class="addcard" onclick="addcard('p2')">add to card</button>
+                        <button id="buy" onclick="buy('p2')">buy now </button>
+                    </div>
                     </a>
                 </div>
 
@@ -134,28 +137,30 @@
                 <!-- this is a therd card  -->
 
                 <div class="card" id="card3">
-                    <a href="/pages/bags1.html" target="_blank">
-                        <div class="card-img">
-                            <img src="https://m.media-amazon.com/images/I/619gGitgILL._AC_UY1100_.jpg" alt="">
-                        </div>
-                        <div class="card-heading">
-                            <h2>bagd name</h2>
-                        </div>
-                        <div class="key-feture">
-                            high quality material &nbsp
-                            stylish design
-                        </div>
+                    <div class="card-img">
+                        <a href="/pages/p2.html" target="_blank">
+                            <img src="https://assets.ajio.com/medias/sys_master/root/20230815/wEiS/64dad2cbeebac147fcc96da3/-473Wx593H-466460546-pink-MODEL.jpg"
+                                alt="">
+                        </a>
+                    </div>
+                    <div class="card-heading">
+                        <h2>Typographic Applique Backpack</h2>
+                    </div>
+                    <div class="key-feture">
+                        high quality material &nbsp
+                        stylish design
+                    </div>
 
-                        <div class="price">
-                            <span> ₹1000</span>
+                    <div class="price">
+                        <span> ₹1000</span>
 
-                        </div>
+                    </div>
 
-                        <div class="button-card">
-                            <button class="addcard" id="cart" onclick="addcard('p3')">add to card</button>
-                            <button id="buy">buy now </button>
-                        </div>
-                    </a>
+                    <div class="button-card">
+                        <button class="addcard" id="cart" onclick="addcard('p3')">add to card</button>
+                        <button id="buy" onclick="buy('p3')">buy now </button>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -178,105 +183,107 @@
                 <div class="wrap">
                     <i class="ri-arrow-left-circle-fill" id="left"></i>
                     <div class="bags" id="active">
-
-                        <img src="./image/Designer__5_-removebg-preview.png""
-                            alt="">
+                        <img src="https://assets.ajio.com/medias/sys_master/root/20240413/a2Ye/661a2b9c05ac7d77bb08624d/-473Wx593H-467137440-grey-MODEL.jpg"
+                            alt="" onclick="showpage('p4')" style="cursor: pointer;">
                         <div class=" partision">
+                        </div>
+                        <div class="bags-name">
+                            <h3>JACK & JONES Colourblock Backpack</h3>
+                            <span id="price">
+                                ₹1980
+                            </span>
+                            <button class="addcard" onclick="addcard('p4')">add to card</button>
+                        </div>
                     </div>
-                    <div class="bags-name">
-                        <h3>office bags</h3>
-                        <span id="price">
-                            ₹120
-                        </span>
-                        <button class="addcard" onclick="addcard('p4')">add to card</button>
-                    </div>
-                </div>
-                <div class="bags">
+                    <div class="bags">
 
-                    <img src="./image/Designer__5_-removebg-preview.png" alt="">
-                    <div class="partision"></div>
-                    <div class="bags-name">
-                        <h3>office bags1</h3>
-                        <span id="price">
-                            ₹1200
-                        </span>
-                        <button class="addcard" onclick="addcard('p5')">add to card</button>
+                        <img src="https://assets.ajio.com/medias/sys_master/root/20230623/m861/6494b091d55b7d0c63a2d288/-473Wx593H-464360535-grey-MODEL.jpg"
+                            alt="" onclick="showpage('p5')" style="cursor: pointer;">
+                        <div class="partision"></div>
+                        <div class="bags-name">
+                            <h3>TIGER MARRON Genuine Leather Backpack</h3>
+                            <span id="price">
+                                ₹3870
+                            </span>
+                            <button class="addcard" onclick="addcard('p5')">add to card</button>
+                        </div>
                     </div>
-                </div>
-                <div class="bags">
 
-                    <img src="./image/Designer__5_-removebg-preview.png""
-                            alt="">
+                    
+                    <div class="bags">
+
+                        <img src="https://skybags.co.in/cdn/shop/products/LPBPCAM2NBL_2_1800x1800.webp?v=1700643974"
+                            alt="" onclick="showpage('p6')" style="cursor: pointer;">
                         <div class=" partision">
-                </div>
-                <div class="bags-name">
-                    <h3>office bags2</h3>
-                    <span id="price">
-                        ₹100
-                    </span>
-                    <button class="addcard" onclick="addcard('p6')">add to card</button>
-                </div>
-            </div>
-            <div class="bags">
+                        </div>
+                        <div class="bags-name">
+                            <h3>SKYBAGS CAMPUS "02 LAPTOP BACKPACK</h3>
+                            <span id="price">
+                                ₹2250
+                            </span>
+                            <button class="addcard" onclick="addcard('p6')">add to card</button>
+                        </div>
+                    </div>
+                    <div class="bags">
 
 
-                <img src="./image/Designer__5_-removebg-preview.png""
-                            alt="">
-                        
+                        <img src="https://skybags.co.in/cdn/shop/files/1_6_cfae77ab-fbfb-4641-a71b-8a8f91ffc8b7_1800x1800.png?v=1707918171"
+                            alt="" onclick="showpage('p7')" style="cursor: pointer;">
+
                         <div class=" partision">
-            </div>
-            <div class="bags-name">
-                <h3>office bags3</h3>
-                <span id="price">
-                    ₹12
-                </span>
-                <button class="addcard" onclick="addcard('p7')">add to card</button>
+                        </div>
+                        <div class="bags-name">
+                            <h3>SKYBAGS KLAN PLUS 07 "SCHOOL BACKPACK</h3>
+                            <span id="price">
+                                ₹1620
+                            </span>
+                            <button class="addcard" onclick="addcard('p7')">add to card</button>
+                        </div>
+                    </div>
+                    <i class="ri-arrow-right-circle-fill" id="right"></i>
+                </div>
             </div>
         </div>
-        <i class="ri-arrow-right-circle-fill" id="right"></i>
-    </div>
-    </div>
-    </div>
 
-    <div class="line"></div>
-    <!-- forth page stating  -->
-    <div class="forth">
+        <div class="line"></div>
+        <!-- forth page stating  -->
+        <div class="forth">
 
-        <!-- <div class="line"></div> -->
-        <div class="footer">
-            <div class="links">
-                <h5><a href="#">home</a></h5>
-                <h5><a href="#">new launch</a></h5>
-                <h5><a href="#">all bags</a></h5>
-                <h5><a href="#">about</a></h5>
-                <h5><a href="#">constact</a></h5>
-            </div>
+            <!-- <div class="line"></div> -->
+            <div class="footer">
+                <div class="links">
+                    <h5><a href="#">home</a></h5>
+                    <h5><a href="#">new launch</a></h5>
+                    <h5><a href="#">all bags</a></h5>
+                    <h5><a href="#">about</a></h5>
+                    <h5><a href="#">constact</a></h5>
+                </div>
 
-            <h4>Copyright © 2024 Happy Bags Pvt Ltd. All Rights Reserved.</h4>
+                <h4>Copyright © 2024 Happy Bags Pvt Ltd. All Rights Reserved.</h4>
 
-        </div>
-    </div>
-    <!-- here menu code start from here -->
-    <div class="menu-div">
-        <h1 class="likns-menu">home</h1>
-        <h1 class="likns-menu">new launch</h1>
-        <h1 class="likns-menu">categorize</h1>
-        <h1 class="likns-menu">about</h1>
-        <div class="search-div">
-            <input type="text"></input>
-            <i class="ri-search-line " id="search-btn"></i>
-            <div class="user-nav-button" onclick="openlogin()">
-                <i class="ri-user-3-line" id="logo-svg"></i>
-            </div>
-            <div class="cart-btn">
-                <a href="./pages/cart.html">
-                    <i class="ri-shopping-cart-line"></i>
-                </a>
             </div>
         </div>
-        <button id="close" onclick="closemenu()">x</button>
+        <!-- here menu code start from here -->
+        <div class="menu-div">
+            <h1 class="likns-menu">home</h1>
+            <h1 class="likns-menu">new launch</h1>
+            <h1 class="likns-menu">categorize</h1>
+            <h1 class="likns-menu">about</h1>
+            <div class="search-div">
+                <input type="text"></input>
+                <i class="ri-search-line " id="search-btn"></i>
+                <div class="user-nav-button" onclick="openlogin()">
+                    <i class="ri-user-3-line" id="logo-svg"></i>
+                </div>
+                <div class="cart-btn">
+                    <a href="./pages/cart.html">
+                        <i class="ri-shopping-cart-line"></i>
+                    </a>
+                </div>
+            </div>
+            <button id="close" onclick="closemenu()">x</button>
 
-    </div>
+        </div>
     </div>
 
 
