final change commit add new feture

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="left-center">
                     <div class="heading">
                         <span>you buy</span>
-                        <span id="change-item">
+                        <span id="change-item" class="demo">
 
                         </span>
                     </div>
@@ -138,7 +138,7 @@
 
                 <div class="card" id="card3">
                     <div class="card-img">
-                        <a href="/pages/p2.html" target="_blank">
+                        <a href="/pages/p3.html" target="_blank">
                             <img src="https://assets.ajio.com/medias/sys_master/root/20230815/wEiS/64dad2cbeebac147fcc96da3/-473Wx593H-466460546-pink-MODEL.jpg"
                                 alt="">
                         </a>
