--- a/pages/p1.html
+++ b/pages/p1.html
@@ -7,503 +7,7 @@
     <title>NIKE Men Logo Print Backpack blue</title>
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
-    <style>
-        body,
-        html,
-        .centainer {
-            font-family: "Roboto", sans-serif;
-            width: 100%;
-            margin: 0;
-            background: linear-gradient(to bottom right, var(--back-color1), var(--back-color2));
-
-        }
-
-        nav {
-            height: 100%;
-            width: 100vw;
-            margin: auto;
-        }
-
-        .nav {
-            height: 10vh;
-            width: 100vw;
-            position: relative;
-            margin: auto;
-        }
-
-        .right-nav {
-            margin-right: 20px;
-        }
-
-
-
-        .main-section {
-            width: 100vw;
-            display: flex;
-            justify-content: space-between;
-            padding: 50px 100px;
-            position: relative;
-            gap: 40px;
-            /* flex-wrap: wrap; */
-        }
-
-        .image-part {
-            width: 40vw;
-            min-height: 80%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            position: sticky;
-            top: 5px;
-            border: 3px solid var(--text-color);
-            border-radius: 25px;
-            max-width: 1200px;
-
-        }
-
-        .image-section {
-            height: 100%;
-            width: 45vw;
-            align-self: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-        }
-
-        .image-section img {
-            height: 90%;
-            width: 80%;
-            overflow: hidden;
-            border-radius: 25px;
-        }
-
-        .other-img {
-            height: 20%;
-            width: 100%;
-            position: relative;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .other-img img {
-            height: 100%;
-            width: 25%;
-            border-radius: 13px 13px;
-            border: 2px solid var(--text-color);
-        }
-
-        /* detail section css start from here */
-
-
-        .detail-part {
-            width: 55vw;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: start;
-            gap: 15px;
-            overflow: hidden;
-        }
-
-        .detail-part h1 {
-            font-size: 30px;
-        }
-
-        .price-part {
-            height: 100px;
-            width: 100%;
-            padding: 10px;
-            padding-top: 15px;
-            border: 2px solid var(--text-color);
-            border-radius: 10px;
-            position: relative;
-        }
-
-        .price-part h5 {
-            font-size: 20px;
-        }
-
-        #price {
-            position: absolute;
-            top: -17px;
-            font-size: 15px;
-            background-color: #D4D5F3;
-            width: 60px;
-            font-weight: 1000;
-            padding-left: 10px;
-            margin-left: 10px;
-        }
-
-        ul {
-            margin-left: 20px;
-        }
-
-        .card-section {
-            display: flex;
-            gap: 10px;
-            font-size: 25px;
-            width: 100%;
-        }
-
-        .count {
-            display: flex;
-            gap: 2px;
-            border: 2px solid var(--text-color);
-            border-radius: 10px;
-        }
-
-        #count-no {
-            padding-top: 5px;
-        }
-
-        .count button {
-            /* padding: 5px 10px; */
-            height: 40px;
-            width: 40px;
-            font-size: 20px;
-            font-weight: 300;
-            border: none;
-            background-color: transparent;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #decrise {
-            padding-bottom: 5px;
-        }
-
-        #increase {
-            padding-bottom: 3px;
-        }
-
-        .addtocart {
-            width: 100%;
-            height: 45px;
-        }
-
-        .addtocart button {
-            border-radius: 10px;
-            width: 100%;
-            height: 100%;
-            font-size: 20px;
-            background-color: transparent;
-            transition: all ease-in 0.4s;
-        }
-
-        .addtocart button:hover {
-            background-color: var(--back-color2);
-        }
-
-
-
-
-
-        @media screen and (max-width:1500px) {
-            .main-section {
-                gap: 20px;
-                padding: 50px 70px;
-
-            }
-
-            .image-section {
-                height: 80%;
-                width: 100%;
-            }
-
-
-
-            .image-part {
-                height: 80vh;
-            }
-
-        }
-
-        @media screen and (max-width:1350px) {
-            .main-section {
-                padding: 50px 70px;
-            }
-
-
-
-            .image-section {
-                width: 100%;
-            }
-
-            .image-part {
-                height: 80vh;
-            }
-        }
-
-        @media screen and (max-width:1240px) {
-            .main-section {
-                flex-wrap: wrap;
-                gap: 40px;
-            }
-
-            .detail-part {
-                width: 50vw;
-            }
-
-            .image-part {
-                height: 70%;
-                position: relative;
-                width: 100%;
-            }
-
-            .image-section {
-                width: 100%;
-            }
-
-            .detail-part {
-                width: 100%;
-            }
-
-
-        }
-
-        @media screen and (max-width:1080px) {
-            .main-section {
-                gap: 40px;
-            }
-
-
-            .image-part {
-                position: relative;
-                width: 100%;
-            }
-
-            .image-section {
-                height: 600px;
-                width: 100%;
-            }
-
-            .other-img {
-                width: 100%;
-                height: 200px;
-            }
-
-            .image-section img {
-                width: 100%;
-                height: 100%;
-            }
-
-            .detail-part {
-                width: 100%;
-            }
-        }
-
-
-        @media screen and (max-width:970px) {
-            .main-section {
-                gap: 40px;
-                padding: 20px 50px;
-            }
-
-            .image-part {
-                width: 45vw;
-                height: 100vh;
-            }
-
-            .image-section img,
-            .image-section {
-                height: 80%;
-                width: 100%;
-            }
-
-            .other-img {
-                height: 20%;
-            }
-
-            .detail-part {
-                width: 50vw;
-            }
-
-
-
-            .image-part {
-                height: 70%;
-                position: relative;
-                width: 100%;
-            }
-
-            .detail-part {
-                width: 100%;
-            }
-
-        }
-
-        @media screen and (max-width:770px) {
-            .main-section {
-                flex-direction: column;
-                gap: 40px;
-            }
-
-            .image-part {
-                position: static;
-                width: 100%;
-                height: 80vh;
-            }
-
-            .image-section {
-                height: 80%;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: space-between;
-                width: 100%;
-
-            }
-
-            .image-section img {
-                height: 100%;
-                width: 80vw;
-
-            }
-
-            .other-img {
-                height: 20vh;
-                width: 100%;
-            }
-
-            .other-img img {
-                height: 200px;
-                width: 25%;
-
-            }
-
-            .detail-part {
-                width: 100%;
-            }
-
-            .detail-part h1 {
-                font-size: 40px;
-            }
-
-            .price-part {
-                /* height: 90px; */
-                width: 100%;
-            }
-
-            .price-part h5 {
-                font-size: 20px;
-            }
-
-            #count-no,
-            .count button {
-                padding-top: 1px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .card-section {
-                height: 30px;
-            }
-
-            .count button {
-                height: 30px;
-                width: 30px;
-            }
-
-            .addtocart {
-                height: 30px;
-            }
-
-            p {
-                font-size: 13px;
-            }
-
-            .image-part {
-                height: 70%;
-                position: relative;
-                width: 100%;
-            }
-
-            .detail-part {
-                width: 100%;
-            }
-        }
-
-        @media screen and (max-width:520px) {
-            .main-section {
-                gap: 40px;
-                padding: 20px 40px;
-            }
-
-            .image-part {
-                height: 55vh;
-            }
-
-            .image-section {
-                height: 80%;
-            }
-
-            .other-img {
-                height: 150px;
-                width: 100%;
-            }
-
-            .other-img img {
-                height: 100%;
-            }
-
-            .detail-part h1 {
-                font-size: 30px;
-            }
-
-            .detail-part h5 {
-                font-size: 20px;
-            }
-
-            .image-part {
-                height: 70%;
-                position: relative;
-                width: 100%;
-            }
-
-            .detail-part {
-                width: 100%;
-            }
-
-        }
-
-        @media screen and (max-width:450px) {
-            .main-section {
-                padding: 30px 10px;
-                gap: 40px;
-            }
-
-            .other-img {
-                height: 120px;
-                width: 100%;
-            }
-
-            .other-img img {
-                height: 100%;
-            }
-
-            .price-part h5 {
-                font-size: 18px;
-            }
-
-            .image-part {
-                height: 500px;
-                position: relative;
-                width: 100%;
-            }
-
-            .image-section img {
-                width: 100%;
-            }
-
-            .detail-part {
-                width: 100%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/pages/all page css/pageall.css">
 </head>
 
 <body>
