--- a/pages/p7.html
+++ b/pages/p7.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NIKE Men Logo Print Backpack</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="HAPPY_BAGS_SHOP/style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/pages/all page css/pageall.css">
+    <link rel="stylesheet" href="HAPPY_BAGS_SHOP/pages/all page css/pageall.css">
 </head>
 
 <body>
@@ -249,7 +249,7 @@
         }
 
     </script>
-    <script src="/script.js"></script>
+    <script src="HAPPY_BAGS_SHOP/script.js"></script>
 </body>
 
 </html>
