--- a/pages/p1.html
+++ b/pages/p1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NIKE Men Logo Print Backpack blue</title>
-    <link rel="stylesheet" href="HAPPY_BAGS_SHOP/style.css">
+    <link rel="stylesheet" href="happy-bags2/style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
     <style>
         
@@ -748,7 +748,7 @@
         }
 
     </script>
-    <script src="HAPPY_BAGS_SHOP/script.js"></script>
+    <script src="happy-bags2/script.js"></script>
 </body>
 
 </html>
