add final project

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
             <div class="card-sec">
                 <div class="card" id="card1">
                     <div class="card-img">
-                        <a href="happy-bags2/pages/p1.html" target="_blank">
+                        <a href="/pages/p1.html" target="_blank">
                             <img src="https://assets.ajio.com/medias/sys_master/root/20231130/vOuf/6568a847afa4cf41f5ab7a7b/-473Wx593H-469565051-multi-MODEL.jpg"
                                 alt="">
                         </a>
                     </div>
                     <div class="card-heading">
-                        <h2>bagd name</h2>
+                        <h2>NIKE men logo print backpack blue</h2>
                     </div>
                     <div class="key-feture">
                         high quality material &nbsp
@@ -107,13 +107,13 @@
                 <!-- this is second card -->
                 <div class="card" id="card2">
                     <div class="card-img">
-                        <a href="happy-bags2/pages/p2.html" target="_blank">
+                        <a href="/pages/p2.html" target="_blank">
                             <img src="https://assets.ajio.com/medias/sys_master/root/20231130/35WR/6568a0bcddf7791519a7ff3e/-473Wx593H-469565050-multi-MODEL.jpg"
                                 alt="">
                         </a>
                     </div>
                     <div class="card-heading">
-                        <h2>bag name</h2>
+                        <h2>NIKE men logo print backpack green</h2>
                     </div>
                     <div class="key-feture">
                         high quality material &nbsp
@@ -138,7 +138,7 @@
 
                 <div class="card" id="card3">
                     <div class="card-img">
-                        <a href="happy-bags2/pages/p3.html" target="_blank">
+                        <a href="/pages/p3.html" target="_blank">
                             <img src="https://assets.ajio.com/medias/sys_master/root/20230815/wEiS/64dad2cbeebac147fcc96da3/-473Wx593H-466460546-pink-MODEL.jpg"
                                 alt="">
                         </a>
@@ -173,10 +173,7 @@
             <div class="glass-part">
                 <div class="detail-office">
                     <h1>leather style office bag</h1>
-                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reiciendis magni dolorum, ducimus
-                        veniam sed fugiat suscipit nesciunt, consequatur quis officia iusto provident in. Provident vel
-                        alias pariatur quibusdam aperiam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo,
-                        officiis.
+                    <h4>Step into the realm of timeless elegance with our exquisite office leather bags. Crafted from 100% natural materials, each bag boasts an aura of authenticity and sophistication. Our artisanal approach ensures that every stitch and fold reflects a dedication to quality and style. 
                     </h4>
                 </div>
 
