--- a/pages/p2.html
+++ b/pages/p2.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NIKE Men Logo Print Backpack green</title>
-    <link rel="stylesheet" href="happy-bags2/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/pages/all page css/pageall.css">
+    <link rel="stylesheet" href="/pages/pageall.css">
 </head>
 
 <body>
